[gd_scene load_steps=2 format=3 uid="uid://b378l5l1leca3"]

[ext_resource type="Script" path="res://examples/remap.gd" id="1_tju27"]

[node name="Remap" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_tju27")

[node name="PressSomething" type="Label" parent="."]
layout_mode = 2
text = "Press a key, mouse button, or joypad button..."

[node name="VBox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "ui_accept"

[node name="Spacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Button1" type="Button" parent="VBox"]
layout_mode = 2
text = "Input 1"

[node name="Button2" type="Button" parent="VBox"]
layout_mode = 2
text = "Input 2"

[connection signal="pressed" from="VBox/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="VBox/Button2" to="." method="_on_button_2_pressed"]
